--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -59,3 +59,14 @@
     top: 8px;
   }
 }
+
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
