--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,18 @@
+.header {
+  position: relative;
+}
+
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 15vh;
+  z-index: 2;
+  background-color: $white;
 }
 
 .header__logo {
@@ -60,13 +71,51 @@
   }
 }
 
+.nav {
+  margin-top: 15vh;
+  position: absolute;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $white;
+  transition: transform 0.3s ease-in-out;
+  transform: translateY(-100%);
+  z-index: 1;
+
+  &.active {
+    transform: translateY(0);
+  }
+}
+
 .nav__list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 100%;
-  margin: 0;
+  height: 30vh;
+  margin: 7vh 0 0 0;
   padding: 0;
   list-style-type: none;
+
+  .nav__item {
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      color: $gold;
+    }
+  }
+}
+
+.nav__phone-number {
+  border: 1px solid $pink;
+  padding: 0.6em 1.5em;
+  font-weight: 700;
+  font-size: 14px;
+  margin-top: 8em;
 }
