--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -82,7 +82,7 @@
   align-items: center;
   background-color: $white;
   transition: transform 0.3s ease-in-out;
-  transform: translateY(-100%);
+  transform: translateY(-150%);
   z-index: 1;
 
   &.active {
@@ -97,7 +97,7 @@
   justify-content: space-evenly;
   width: 100%;
   height: 30vh;
-  margin: 7vh 0 0 0;
+  margin: 0;
   padding: 0;
   list-style-type: none;
 
