--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -20,6 +20,7 @@
 }
 
 .header__hamburger {
+  font-size: 1.6rem;
   position: relative;
   width: 100px;
   height: 100px;
@@ -103,7 +104,7 @@
 
   .nav__item {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 2rem;
     transition: 0.3s ease-in-out;
 
     &:hover {
@@ -116,6 +117,6 @@
   border: 1px solid $pink;
   padding: 0.6em 1.5em;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 1.4rem;
   margin-top: 8em;
 }
