--- a/src/scss/constants/_variables.scss
+++ b/src/scss/constants/_variables.scss
@@ -1,4 +1,5 @@
 $white: hsl(0, 0%, 100%);
 $pink: hsl(334, 40%, 90%);
 $dark: hsl(231, 8%, 30%);
+$dark-accent: hsl(233, 8%, 21%);
 $gold: hsl(42, 38%, 69%);
