--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -4,6 +4,43 @@
 
 .carousel__image {
   min-height: 300px;
-  width: 1300px;
   object-fit: cover;
+}
+
+.carousel__title {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.carousel-indicators {
+  margin-bottom: 1.5em;
+
+  .carousel__indiactior {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid $white;
+    opacity: 1;
+  }
+
+  .active {
+    background-color: $white;
+  }
+}
+
+.carousel__action-link {
+  font-weight: 700;
+  font-size: 1.4rem;
+  display: inline-block;
+  padding: 0.5em 1.25em;
+  background-color: $dark;
+  color: $white;
+  transition: 0.3s ease-in-out;
+  margin: 0.75em 0 1.75em 0;
+
+  &:hover,
+  &:focus {
+    color: $pink;
+  }
 }
