--- a/src/scss/components/_offer.scss
+++ b/src/scss/components/_offer.scss
@@ -1,3 +1,8 @@
+.section {
+  font-size: 2rem;
+  padding: 1.75em 1.25em;
+}
+
 .section__title {
   font-weight: 700;
   font-size: 2.6rem;
@@ -5,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1.25em 0;
+  margin-bottom: 1.25em;
 
   &::after {
     content: '';
