Change structure and names of scss files

--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -1,5 +1,5 @@
 @import 'header';
 @import 'footer';
-@import 'slider';
-@import 'offer';
-@import 'about';
+@import 'home-page';
+@import 'offer-page';
+@import 'about-page';
