Change classes name at about page in employees section

--- a/src/scss/components/_about-page.scss
+++ b/src/scss/components/_about-page.scss
@@ -16,10 +16,8 @@
   line-height: 1.5em;
 }
 
-.employees {
+.section--employees {
   background-color: $pink;
-  font-size: 1.5rem;
-  padding: 2.4em 1em;
 }
 
 .employees__employee {
