--- a/src/scss/components/_home-page.scss
+++ b/src/scss/components/_home-page.scss
@@ -64,4 +64,9 @@
   border: 1px solid $pink;
   font-weight: 700;
   padding: 0.75em 1.5em;
+  transition: 0.3s ease-in-out;
+
+  &:hover {
+    background-color: $pink;
+  }
 }
