--- a/src/scss/basic/_basic.scss
+++ b/src/scss/basic/_basic.scss
@@ -40,3 +40,29 @@ body {
   line-height: 1.5em;
   line-height: 1.5em;
 }
+
+.post-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1em 0;
+}
+
+.post__title {
+  font-size: 2.2rem;
+  font-weight: 700;
+  margin: 0.75em 0;
+}
+
+.post__link {
+  font-size: 1.4rem;
+  border: 1px solid $pink;
+  font-weight: 700;
+  padding: 0.75em 1.5em;
+  transition: 0.3s ease-in-out;
+
+  &:hover {
+    background-color: $pink;
+  }
+}
