--- a/src/scss/components/_offer-page.scss
+++ b/src/scss/components/_offer-page.scss
@@ -14,7 +14,7 @@
   width: 100%;
   object-fit: cover;
   min-height: 300px;
-  margin: 1.5em 0 2em 0;
+  margin-bottom: 2em;
 }
 
 .offer__content {
