--- a/src/scss/components/_home-page.scss
+++ b/src/scss/components/_home-page.scss
@@ -44,3 +44,54 @@
     color: $pink;
   }
 }
+
+.section--testimonials {
+  padding-bottom: 4.5em;
+  background-color: $pink;
+}
+
+.section__title--testimonials {
+  text-align: center;
+  margin-bottom: 1.5em;
+
+  &::after {
+    background-color: $white;
+  }
+}
+
+.carousel-indicators--testimonials {
+  margin: 0 0 -2.1em 0;
+
+  .carousel__indiactior--testimonials {
+    background-color: transparent;
+    border: 2px solid $dark;
+  }
+
+  .active {
+    background-color: $dark;
+  }
+}
+
+.testimonials__overview {
+  font-size: 2.2rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.testimonials__paragraph {
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+.carousel__angle--testimonials {
+  color: $dark;
+  opacity: 1;
+}
+
+.carousel-control.left {
+  margin-left: -2em;
+}
+
+.carousel-control.right {
+  margin-right: -2em;
+}
