Rename all section and section title classes and include mixins

--- a/src/scss/components/_about-page.scss
+++ b/src/scss/components/_about-page.scss
@@ -6,11 +6,17 @@
   object-position: center;
 }
 
-.section--about {
+.about {
+  @include section;
   text-align: center;
 }
 
-.section--employees {
+.about__title {
+  @include section__title;
+}
+
+.employees {
+  @include section;
   background-color: $pink;
 }
 
