Create dynamic social icons section and add it to contact page and footer

--- a/src/scss/components/_contact-page.scss
+++ b/src/scss/components/_contact-page.scss
@@ -33,3 +33,11 @@
 .contact__subsection {
   margin-top: 1em;
 }
+
+.socials__icons-container {
+  padding-top: 0.75em;
+}
+
+.socials__icon {
+  @extend .footer__social-icon;
+}
