--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -2,4 +2,5 @@ $white: hsl(0, 0%, 100%);
 $pink: hsl(334, 40%, 90%);
 $dark: hsl(231, 8%, 30%);
 $dark-accent: hsl(233, 8%, 21%);
+$light-gray: hsl(0, 0%, 87%);
 $gold: hsl(42, 38%, 69%);
