--- a/src/scss/components/_tariff-page.scss
+++ b/src/scss/components/_tariff-page.scss
@@ -6,3 +6,18 @@
 .tariff__title {
   @include section__title;
 }
+
+.tariff__offer-title {
+  font-weight: 700;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 0.75em;
+  border: 1px solid $light-gray;
+  margin: 0;
+  cursor: pointer;
+}
+
+.active-offer {
+  background-color: $gold;
+  color: $white;
+}
