--- a/src/scss/components/_contact-page.scss
+++ b/src/scss/components/_contact-page.scss
@@ -41,3 +41,15 @@
 .socials__icon {
   @extend .footer__social-icon;
 }
+
+//map
+
+.map {
+  width: 100%;
+  height: 500px;
+  padding-top: 15vh;
+}
+
+.info-content {
+  color: #999;
+}
