--- a/src/scss/components/_home-page.scss
+++ b/src/scss/components/_home-page.scss
@@ -43,10 +43,34 @@
   &:focus {
     color: $pink;
   }
+
+  @media (min-width: 768px) {
+    margin: 1.75em 0 6em 0;
+  }
+
+  @media (min-width: 1024px) {
+    margin: 1.75em 0 8em 0;
+  }
+
+  @media (min-width: 1440px) {
+    margin: 1.75em 0 12em 0;
+  }
 }
 
 .offer-home {
   @include section;
+}
+
+.offer__posts {
+  max-width: 1200px;
+  margin: 0 auto;
+
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
 
 .offer-home__title {
@@ -100,8 +124,32 @@
 
 .carousel-control.left {
   margin-left: -2em;
+
+  @media (min-width: 650px) {
+    margin-left: -3em;
+  }
+
+  @media (min-width: 768px) {
+    margin-left: -5em;
+  }
+
+  @media (min-width: 1440px) {
+    margin-left: -12em;
+  }
 }
 
 .carousel-control.right {
   margin-right: -2em;
+
+  @media (min-width: 650px) {
+    margin-right: -3em;
+  }
+
+  @media (min-width: 768px) {
+    margin-right: -5em;
+  }
+
+  @media (min-width: 1440px) {
+    margin-right: -12em;
+  }
 }
