--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -44,6 +44,11 @@
   display: flex;
   flex-direction: column;
 
+  @media (min-width: 768px) {
+    justify-content: center;
+    align-items: center;
+  }
+
   &::before {
     content: '';
     display: block;
@@ -52,5 +57,44 @@
     background-color: $dark-accent;
     margin: 1.25em 0;
     align-self: center;
+
+    @media (min-width: 768px) {
+      width: 80%;
+    }
+  }
+}
+
+.footer__copyright-container {
+  width: 80%;
+
+  @media (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.footer-containers {
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    width: 80%;
+  }
+
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.footer-container {
+  @media (min-width: 768px) {
+    margin-right: 3em;
+  }
+}
+
+.footer-container--desc {
+  @media (min-width: 768px) {
+    width: 50%;
   }
 }
