--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -30,6 +30,10 @@
   align-items: center;
   font-weight: bold;
 
+  @media (min-width: 1024px) {
+    display: none;
+  }
+
   &.active .hamburger__line {
     background: rgba(0, 0, 0, 0);
   }
@@ -86,6 +90,18 @@
   transform: translateY(-150%);
   z-index: 99;
 
+  @media (min-width: 1024px) {
+    margin-top: 0;
+    height: 15vh;
+    transform: translateY(0);
+    width: 58vw;
+    margin-left: 17em;
+  }
+
+  @media (min-width: 1300px) {
+    width: 62vw;
+  }
+
   &.active {
     transform: translateY(0);
   }
@@ -102,14 +118,24 @@
   padding: 0;
   list-style-type: none;
 
-  .nav__item {
-    font-weight: bold;
-    font-size: 2rem;
-    transition: 0.3s ease-in-out;
+  @media (min-width: 1024px) {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+}
 
-    &:hover {
-      color: $gold;
-    }
+.nav__item {
+  font-weight: bold;
+  font-size: 2rem;
+  transition: 0.3s ease-in-out;
+
+  &:hover {
+    color: $gold;
+  }
+
+  @media (min-width: 1024px) {
+    font-size: 1.5rem;
+    margin-right: 6em;
   }
 }
 
@@ -119,4 +145,14 @@
   font-weight: 700;
   font-size: 1.4rem;
   margin-top: 8em;
+
+  @media (min-width: 1024px) {
+    margin: 0;
+  }
+}
+
+.nav-container {
+  @media (min-width: 1024px) {
+    display: flex;
+  }
 }
