--- a/src/scss/components/_offer-page.scss
+++ b/src/scss/components/_offer-page.scss
@@ -1,6 +1,11 @@
 .offer {
   padding-top: 18vh;
   padding-bottom: 1.75em;
+
+  @media (min-width: 768px) {
+    padding-top: 15vh;
+    padding-bottom: 5em;
+  }
 }
 
 .offer-content-container {
