--- a/src/scss/components/_about-page.scss
+++ b/src/scss/components/_about-page.scss
@@ -9,15 +9,42 @@
 .about {
   @include section;
   text-align: center;
+
+  @media (min-width: 768px) {
+    width: 80%;
+    margin: 0.75em auto;
+  }
 }
 
 .about__title {
   @include section__title;
 }
 
-.employees {
+.employees-list {
   @include section;
   background-color: $pink;
+
+  @media (min-width: 1340px) {
+    padding: 3em;
+  }
+}
+
+.employees-container {
+  @media (min-width: 768px) {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  @media (min-width: 1340px) {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+  }
 }
 
 .employees__employee {
@@ -41,4 +68,8 @@
   font-size: 1.8rem;
   padding-bottom: 1.5em;
   margin: 0;
+
+  @media (min-width: 1340px) {
+    padding-bottom: 0;
+  }
 }
