--- a/src/scss/components/_offer-page.scss
+++ b/src/scss/components/_offer-page.scss
@@ -6,36 +6,54 @@
     padding-top: 15vh;
     padding-bottom: 5em;
   }
-}
 
-.offer-content-container {
-  padding: 0 2em 1.75em 2em;
-}
+  &-content-container {
+    padding: 0 2em 1.75em 2em;
 
-.offer__title {
-  @include section__title;
-}
+    @media (min-width: 768px) {
+      padding: 5em 2em 2.7em 2em;
+      width: 80%;
+      margin: 0 auto;
+    }
 
-.offer__title--post {
-  align-items: flex-start;
-}
+    @media (min-width: 1024px) {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 
-.offer__price {
-  color: $gold;
-  font-weight: 700;
-  font-size: 2.6rem;
-  margin-bottom: 0.5em;
-}
+  &-content-col--post {
+    @media (min-width: 1024px) {
+      width: 70%;
+    }
+  }
 
-.offer__img {
-  width: 100%;
-  object-fit: cover;
-  min-height: 300px;
-  margin-bottom: 2em;
-}
+  &__title {
+    @include section__title;
+  }
 
-.offer__content {
-  font-size: 1.8rem;
+  &__title--post {
+    align-items: flex-start;
+  }
+
+  &__price {
+    color: $gold;
+    font-weight: 700;
+    font-size: 2.6rem;
+    margin-bottom: 0.5em;
+  }
+
+  &__img {
+    width: 100%;
+    object-fit: cover;
+    min-height: 300px;
+    margin-bottom: 2em;
+    max-height: 400px;
+  }
+
+  &__content {
+    font-size: 1.8rem;
+  }
 }
 
 .pros-and-cons {
@@ -43,21 +61,43 @@
   font-size: 1rem;
   background-color: $pink;
   padding: 0 2em 3.5em 2em;
-}
 
-.pros-and-cons__title {
-  @include section__title;
-  padding: 1.4em 0 0.75em 0;
-  margin: 0;
-  align-items: flex-start;
-
-  &::after {
-    background-color: $white;
+  @media (min-width: 768px) {
+    padding: 2em 2em 6em 2em;
   }
-}
 
-.pros-and-cons__paragraph {
-  font-size: 1.8rem;
-  margin: 0.25em;
-  font-weight: 700;
+  &-container {
+    @media (min-width: 768px) {
+      width: 80%;
+      margin: 0 auto;
+      display: flex;
+    }
+  }
+
+  &__cons {
+    @media (min-width: 768px) {
+      margin-left: 5vw;
+    }
+
+    @media (min-width: 1024px) {
+      margin-left: 20vw;
+    }
+  }
+
+  &__title {
+    @include section__title;
+    padding: 1.4em 0 0.75em 0;
+    margin: 0;
+    align-items: flex-start;
+
+    &::after {
+      background-color: $white;
+    }
+  }
+
+  &__paragraph {
+    font-size: 1.8rem;
+    margin: 0.25em;
+    font-weight: 700;
+  }
 }
