--- a/src/scss/components/_home-page.scss
+++ b/src/scss/components/_home-page.scss
@@ -65,7 +65,7 @@
   max-width: 1200px;
   margin: 0 auto;
 
-  @media (min-width: 1024px) {
+  @media (min-width: 1060px) {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -151,5 +151,13 @@
 
   @media (min-width: 1440px) {
     margin-right: -15em;
+  }
+}
+
+.carousel-item--testimonials {
+  min-height: 280px;
+
+  @media (min-width: 768px) {
+    min-height: 150px;
   }
 }
