--- a/src/scss/components/_tariff-page.scss
+++ b/src/scss/components/_tariff-page.scss
@@ -15,9 +15,32 @@
   border: 1px solid $light-gray;
   margin: 0;
   cursor: pointer;
+  width: 100%;
+  color: $dark;
+  background-color: $white;
 }
 
 .active-offer {
   background-color: $gold;
   color: $white;
+}
+
+.tariff__position {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-weight: 900;
+  font-size: 1.4rem;
+
+  &::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: $light-gray;
+  }
+}
+
+.nav-item {
+  text-align: center;
 }
