--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,55 +1,55 @@
 .header {
   position: relative;
-}
 
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 15vh;
-  z-index: 100;
-  background-color: $white;
-}
-
-.header__logo {
-  width: 115px;
-
-  @media (min-width: 1024px) {
-    margin-left: 16em;
-  }
-}
-
-.header__hamburger {
-  font-size: 1.6rem;
-  position: relative;
-  width: 100px;
-  height: 100px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-
-  @media (min-width: 1024px) {
-    display: none;
-  }
-
-  &.active .hamburger__line {
-    background: rgba(0, 0, 0, 0);
-  }
-
-  &.active .hamburger__line:before {
+  &-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
     top: 0;
-    transform: rotate(45deg);
+    left: 0;
+    width: 100%;
+    height: 15vh;
+    z-index: 100;
+    background-color: $white;
   }
 
-  &.active .hamburger__line:after {
-    top: 0;
-    transform: rotate(135deg);
+  &__logo {
+    width: 115px;
+
+    @media (min-width: 1024px) {
+      margin-left: 16em;
+    }
+  }
+
+  &__hamburger {
+    font-size: 1.6rem;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+
+    @media (min-width: 1024px) {
+      display: none;
+    }
+
+    &.active .hamburger__line {
+      background: rgba(0, 0, 0, 0);
+    }
+
+    &.active .hamburger__line:before {
+      top: 0;
+      transform: rotate(45deg);
+    }
+
+    &.active .hamburger__line:after {
+      top: 0;
+      transform: rotate(135deg);
+    }
   }
 }
 
@@ -110,58 +110,58 @@
   &.active {
     transform: translateY(0);
   }
-}
 
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  height: 30vh;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-
-  @media (min-width: 1024px) {
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-}
-
-.nav__item {
-  font-weight: bold;
-  font-size: 2rem;
-  transition: 0.3s ease-in-out;
-
-  &:hover {
-    color: $gold;
-  }
-
-  @media (min-width: 1024px) {
-    font-size: 1.5rem;
-    margin-right: 5em;
-  }
-
-  &:last-of-type {
-    margin-right: 0em;
-  }
-}
-
-.nav__phone-number {
-  border: 1px solid $pink;
-  padding: 0.6em 1.5em;
-  font-weight: 700;
-  font-size: 1.4rem;
-  margin-top: 8em;
-
-  @media (min-width: 1024px) {
-    margin: 0;
-  }
-}
-
-.nav-container {
-  @media (min-width: 1024px) {
+  &__list {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 30vh;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+
+    @media (min-width: 1024px) {
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+  }
+
+  &__item {
+    font-weight: bold;
+    font-size: 2rem;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      color: $gold;
+    }
+
+    @media (min-width: 1024px) {
+      font-size: 1.5rem;
+      margin-right: 5em;
+    }
+
+    &:last-of-type {
+      margin-right: 0em;
+    }
+  }
+
+  &__phone-number {
+    border: 1px solid $pink;
+    padding: 0.6em 1.5em;
+    font-weight: 700;
+    font-size: 1.4rem;
+    margin-top: 8em;
+
+    @media (min-width: 1024px) {
+      margin: 0;
+    }
+  }
+
+  &-container {
+    @media (min-width: 1024px) {
+      display: flex;
+    }
   }
 }
