--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -80,7 +80,7 @@
   }
 }
 
-.nav {
+.navigation {
   margin-top: 15vh;
   position: absolute;
   width: 100%;
@@ -98,70 +98,73 @@
     margin-top: 0;
     height: 15vh;
     transform: translateY(0);
-    width: 46vw;
+    width: 60vw;
     margin-left: 32em;
     z-index: 101;
+    flex-direction: row;
   }
 
   @media (min-width: 1300px) {
-    width: 53vw;
+    width: 65vw;
   }
 
   &.active {
     transform: translateY(0);
   }
+}
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 30vh;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+.current-menu-item {
+  color: $gold;
+}
 
-    @media (min-width: 1024px) {
-      flex-direction: row;
-      justify-content: flex-start;
-    }
-  }
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 30vh;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 
-  &__item {
-    font-weight: bold;
-    font-size: 2rem;
-    transition: 0.3s ease-in-out;
-
-    &:hover {
-      color: $gold;
-    }
-
-    @media (min-width: 1024px) {
-      font-size: 1.5rem;
-      margin-right: 5em;
-    }
-
-    &:last-of-type {
-      margin-right: 0em;
-    }
-  }
-
-  &__phone-number {
-    border: 1px solid $pink;
-    padding: 0.6em 1.5em;
-    font-weight: 700;
-    font-size: 1.4rem;
-    margin-top: 8em;
-
-    @media (min-width: 1024px) {
-      margin: 0;
-    }
-  }
-
-  &-container {
-    @media (min-width: 1024px) {
-      display: flex;
-    }
+  @media (min-width: 1024px) {
+    flex-direction: row;
+    justify-content: flex-start;
   }
 }
+
+.nav__item {
+  font-weight: bold;
+  font-size: 2rem;
+  transition: 0.3s ease-in-out;
+
+  @media (min-width: 1024px) {
+    font-size: 1.5rem;
+    margin-right: 5em;
+  }
+
+  &:last-of-type {
+    margin-right: 0em;
+  }
+}
+
+.nav__phone-number {
+  border: 1px solid $pink;
+  padding: 0.6em 1.5em;
+  font-weight: 700;
+  font-size: 1.4rem;
+  margin-top: 8em;
+
+  @media (min-width: 1024px) {
+    width: 250px;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+// .nav-container {
+//   @media (min-width: 1024px) {
+//     display: flex;
+//   }
+// }
